Theme corrections. Right menu side, making bottom scrollbar show up. fixed

--- a/domus.Link/trunk/theme/new/new.css
+++ b/domus.Link/trunk/theme/new/new.css
@@ -27,7 +27,7 @@ div#menu {
 
 div#menuitem {
 	float: left;
-	width: 14.285%; /* 100/7 ~= 14.285 */
+	width: 14.274%; /* 100/7 ~= 14.285 */
 	text-align: center;
 	font-size: 14px;
 
@@ -61,6 +61,7 @@ div#submenu {
 	color: #666666;
 	font-size: 10px;
 	border-bottom: 1px dotted #666666;
+	border-right: 1px solid #000000;
 }
 
 div#submenu p {
